[gd_scene load_steps=26 format=2]

[ext_resource path="res://src/ui/sketch_control/ControlPane.gd" type="Script" id=1]
[ext_resource path="res://src/ui/uart_console/UartConsole.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/collapsable/collapsable.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/themes/regular_button/regular_button.tres" type="Theme" id=4]
[ext_resource path="res://src/ui/sketch_control/SketchLog.gd" type="Script" id=5]
[ext_resource path="res://media/fonts/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )
border_width_bottom = 1
border_color = Color( 0.305882, 0.305882, 0.305882, 1 )

[sub_resource type="DynamicFont" id=2]
use_mipmaps = true
use_filter = true
extra_spacing_top = -6
extra_spacing_bottom = -4
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.054902, 0.498039, 0.792157, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0.478431, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.478431, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.164706, 0.164706, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0.478431, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0.478431, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[sub_resource type="StyleBoxFlat" id=15]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=16]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=17]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.478431, 0.8, 1 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[node name="ControlPane" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SketchSlot" type="PanelContainer" parent="."]
margin_right = 1280.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer2" type="MarginContainer" parent="SketchSlot"]
margin_right = 1280.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 40 )
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="SketchSlot/VBoxContainer2"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1276.0
margin_bottom = 36.0
alignment = 1

[node name="SketchPath" type="Label" parent="SketchSlot/VBoxContainer2/VBoxContainer"]
margin_top = 1.0
margin_right = 1272.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = " testino.ino"

[node name="SketchStatus" type="Label" parent="SketchSlot/VBoxContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 1272.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.533333, 0.533333, 0.533333, 1 )
text = " Compiled"

[node name="HBoxContainer" type="MarginContainer" parent="SketchSlot/VBoxContainer2"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1276.0
margin_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="SketchSlot/VBoxContainer2/HBoxContainer"]
margin_right = 1272.0
margin_bottom = 32.0
alignment = 2

[node name="Compile" type="Button" parent="SketchSlot/VBoxContainer2/HBoxContainer/HBoxContainer"]
margin_left = 1158.0
margin_right = 1229.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
theme = ExtResource( 4 )
text = "  Compile  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompileLog" type="Button" parent="SketchSlot/VBoxContainer2/HBoxContainer/HBoxContainer"]
margin_left = 1233.0
margin_right = 1272.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
theme = ExtResource( 4 )
text = "  Log  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding3" type="Control" parent="."]
margin_top = 42.0
margin_right = 1280.0
margin_bottom = 47.0
rect_min_size = Vector2( 0, 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 47.0
margin_right = 1280.0
margin_bottom = 77.0
custom_constants/margin_right = 4
custom_constants/margin_left = 4

[node name="BoardHeader" type="Label" parent="MarginContainer"]
margin_left = 4.0
margin_right = 1276.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Board"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="ToolButton" parent="MarginContainer"]
margin_left = 1261.0
margin_right = 1276.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = " x "

[node name="PaddingBox2" type="MarginContainer" parent="."]
margin_top = 77.0
margin_right = 1280.0
margin_bottom = 107.0
custom_constants/margin_right = 4
custom_constants/margin_left = 4

[node name="SketchButtons" type="HBoxContainer" parent="PaddingBox2"]
margin_left = 4.0
margin_right = 1276.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Start" type="Button" parent="PaddingBox2/SketchButtons"]
margin_right = 634.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Button" parent="PaddingBox2/SketchButtons"]
margin_left = 638.0
margin_right = 1272.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
disabled = true
text = "Suspend"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compile" type="Button" parent="PaddingBox2/SketchButtons"]
visible = false
margin_left = 850.0
margin_right = 1272.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 13 )
text = "Compile"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding2" type="Control" parent="."]
margin_top = 107.0
margin_right = 1280.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 5 )

[node name="VehicleHeader" type="Label" parent="."]
margin_top = 112.0
margin_right = 1280.0
margin_bottom = 142.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Vehicle"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaddingBox" type="MarginContainer" parent="."]
margin_top = 142.0
margin_right = 1280.0
margin_bottom = 172.0
custom_constants/margin_right = 4
custom_constants/margin_left = 4

[node name="VehicleButtons" type="HBoxContainer" parent="PaddingBox"]
margin_left = 4.0
margin_right = 1276.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Reset" type="Button" parent="PaddingBox/VehicleButtons"]
margin_right = 634.0
margin_bottom = 30.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
disabled = true
text = "Reset pos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Follow" type="Button" parent="PaddingBox/VehicleButtons"]
margin_left = 638.0
margin_right = 1272.0
margin_bottom = 30.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
disabled = true
text = "Follow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="Control" parent="."]
margin_top = 172.0
margin_right = 1280.0
margin_bottom = 187.0
rect_min_size = Vector2( 0, 15 )

[node name="AttachmentsHeader" type="Label" parent="."]
margin_top = 187.0
margin_right = 1280.0
margin_bottom = 207.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Attachments"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="."]
margin_top = 207.0
margin_right = 1280.0
margin_bottom = 666.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="Attachments" type="VBoxContainer" parent="Scroll"]
margin_right = 1280.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="empty" type="Label" parent="Scroll/Attachments"]
margin_right = 1280.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_vertical = 5
custom_colors/font_color = Color( 0.298039, 0.298039, 0.298039, 1 )
text = "no attachments found"
align = 1
valign = 1

[node name="Control" parent="Scroll/Attachments" instance=ExtResource( 3 )]
visible = false
margin_top = 40.0
margin_right = 1280.0
margin_bottom = 61.0
heading_text = "Distance Sensor"

[node name="Label" type="Label" parent="Scroll/Attachments/Control"]
visible = false
margin_top = 22.0
margin_right = 304.0
margin_bottom = 53.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "    Pin: 0
    Distance: 0.1m"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" parent="Scroll/Attachments" instance=ExtResource( 3 )]
visible = false
margin_top = 40.0
margin_right = 1280.0
margin_bottom = 109.0
heading_text = "Brushed motor"

[node name="Label" type="Label" parent="Scroll/Attachments/Control2"]
visible = false
margin_top = 21.0
margin_right = 1280.0
margin_bottom = 69.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "    Pins: 1,2,3
    Direction: Forward
    Throttle: 80%"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log" parent="." instance=ExtResource( 3 )]
margin_top = 666.0
margin_right = 1280.0
margin_bottom = 693.0
heading_text = "Log"

[node name="SketchLog" type="PanelContainer" parent="Log"]
visible = false
margin_top = 27.0
margin_right = 1280.0
margin_bottom = 327.0
rect_min_size = Vector2( 0, 300 )
custom_styles/panel = SubResource( 14 )
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Log/SketchLog"]
margin_right = 1280.0
margin_bottom = 300.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Log/SketchLog/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 28.0

[node name="Copy" type="Button" parent="Log/SketchLog/VBoxContainer/HBoxContainer"]
margin_right = 638.0
margin_bottom = 28.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 16 )
text = "Copy To Clipboard"

[node name="Open" type="Button" parent="Log/SketchLog/VBoxContainer/HBoxContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 28.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 16 )
text = "Open In window ^"

[node name="LogBox" type="RichTextLabel" parent="Log/SketchLog/VBoxContainer"]
margin_top = 28.0
margin_right = 1280.0
margin_bottom = 300.0
size_flags_vertical = 3
custom_styles/focus = SubResource( 18 )
custom_colors/selection_color = Color( 0.184314, 0.184314, 0.184314, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
bbcode_enabled = true
scroll_following = true
override_selected_font_color = true

[node name="Serial" parent="." instance=ExtResource( 3 )]
margin_top = 693.0
margin_right = 1280.0
margin_bottom = 720.0
heading_text = "Serial"
disabled = true

[node name="UartPanel" type="PanelContainer" parent="Serial"]
visible = false
rect_min_size = Vector2( 0, 300 )
custom_styles/panel = SubResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uart" parent="Serial/UartPanel" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 300.0
